--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,8 @@
     "graphql-request": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.34.12"
+    "react-query": "^3.34.12",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
