--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
