--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "graphql-request": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.26.0",
     "react-query": "^3.34.12",
     "react-router-dom": "^6.2.1"
   },
