--- a/app/package.json
+++ b/app/package.json
@@ -22,9 +22,12 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.2",
     "graphql": "^16.2.0",
     "graphql-tag": "^2.12.6",
-    "react-scripts": "5.0.0"
+    "postcss": "^8.4.6",
+    "react-scripts": "5.0.0",
+    "tailwindcss": "^3.0.18"
   },
   "browserslist": {
     "production": [
