--- a/app/package.json
+++ b/app/package.json
@@ -11,8 +11,10 @@
   },
   "proxy": "http://localhost:4000",
   "dependencies": {
+    "graphql-request": "^4.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-query": "^3.34.12"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
