--- a/app/codegen.yml
+++ b/app/codegen.yml
@@ -5,7 +5,7 @@ hooks:
     - prettier --write
 generates:
   src/generated/graphql.ts:
-    documents: 'src/**/*.tsx'
+    documents: ['src/**/*.tsx', 'src/**/*.ts']
     plugins:
       - typescript
       - typescript-operations
